noyon : changes : models updated

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
     {% block page_css %}{% endblock %}
     {% endautoescape %}
 
-    <title>{% block page_title %}{% endblock %} || EBIT</title>
+    <title>{% block page_title %}{% endblock %} || HRM</title>
 
 </head>
 
@@ -41,7 +41,7 @@
     <div class="preloader">
         <div class="loader">
             <div class="loader__figure"></div>
-            <p class="loader__label">EBIT</p>
+            <p class="loader__label">HRM</p>
         </div>
     </div>
     <!-- ============================================================== -->
