noyon  : changes : hr portion added

--- a/general/templates/home_info_1.html
+++ b/general/templates/home_info_1.html
@@ -1,4 +1,4 @@
-{% load sc_filters %}
+{% load general_filters %}
 {% load static %}
 <link href="{% static '/dist/css/jquerysctipttop.css' %}" rel="stylesheet" type="text/css">
 <link href="{% static 'node_modules/bootstrap-daterangepicker/daterangepicker.css' %}" rel="stylesheet">
