--- a/hr/templates/hr/employee/view.html
+++ b/hr/templates/hr/employee/view.html
@@ -1,7 +1,7 @@
 {% extends "admin.html" %}
 {% load static %}
 {% load data_load %}
-{% load sc_filters %}
+{% load general_filters %}
 
 {% block page_title %}Employee Details{% endblock %}
 
