--- a/hr/templates/hr/holiday/base.html
+++ b/hr/templates/hr/holiday/base.html
@@ -1,6 +1,6 @@
 {% extends "admin.html" %}
 {% load static %}
-{% load sc_filters %}
+{% load general_filters %}
 {% block page_title %}Holiday Management{% endblock %}
 {% block add_css %}
 <link href="{% static 'node_modules/bootstrap-daterangepicker/daterangepicker.css' %}" rel="stylesheet">
