--- a/hr/templates/hr/holiday/weekend.html
+++ b/hr/templates/hr/holiday/weekend.html
@@ -1,6 +1,6 @@
 {% extends "admin.html" %}
 {% load static %}
-{% load sc_filters %}
+{% load general_filters %}
 {% block page_title %}Company wise Weekends{% endblock %}
 
 {% block add_css %}
