--- a/hr/templates/hr/salary/import_other_salary_amounts.html
+++ b/hr/templates/hr/salary/import_other_salary_amounts.html
@@ -1,6 +1,6 @@
 {% extends "admin.html" %}
 {% load static %}
-{% load sc_filters %}
+{% load general_filters %}
 {% load humanize %}
 
 {% block page_title %} Import Other Salary Amounts {% endblock %}
