--- a/hr/templates/hr/salary/process.html
+++ b/hr/templates/hr/salary/process.html
@@ -1,7 +1,6 @@
 {% extends "admin.html" %}
 {% load static %}
-{% load inv_filters %}
-{% load sc_filters %}
+{% load general_filters %}
 
 {% block page_title %}Salary Process{% endblock %}
 
