--- a/templates/topbar.html
+++ b/templates/topbar.html
@@ -188,7 +188,7 @@
     }
 
    .bg-gradient-fuchsia {
-        background-image: linear-gradient(310deg,#141727,#015178);
+        background-image: linear-gradient(310deg,#1E90FF,#1E90FF);
         --tw-shadow: 0 .3125rem .625rem 0 rgba(0,0,0,.12);
         --tw-ring-shadow: 0 0 #0000;
         --tw-ring-offset-shadow: 0 0 #0000;
@@ -293,7 +293,7 @@
     }
     .profile-tab li a.nav-link.active,
     .customtab li a.nav-link.active {     
-        color: #015178;
+        color: #1E90FF;
         {% comment %} Dark Cerulean {% endcomment %}
     }
     .horizontal-nav .sidebar-nav #sidebarnav>li>a {
@@ -412,11 +412,11 @@
         justify-content: center;
         align-items: center;
     }
-      .image:hover{
-          transform: rotate(15deg) scale(1.5);
-      }
+    .image:hover{
+        transform: rotate(15deg) scale(1.5);
+    }
 
-      .navbar-brand img { width : 60%; }
+    .navbar-brand img { width : 60%; }
     @media only screen and (max-width: 992px) {
         footer{ font-size: 10px;}
         .topbar .top-navbar .navbar-header {
@@ -737,7 +737,7 @@
                     </a >
                 </li> -->
                 <li class="nav-item">
-                    <a href="/helpdesk/phonebook" class="nav-link  waves-effect waves-dark" style="padding-top: 13px">
+                    <a href="/supportdesk/phonebook" class="nav-link  waves-effect waves-dark" style="padding-top: 13px">
                         <i style="font-size: 26px !important;" class="ti-agenda" title="Phonebook"></i>
                     </a>
                 </li>
