--- a/desk/templates/issue/assessment_list.html
+++ b/desk/templates/issue/assessment_list.html
@@ -1,6 +1,6 @@
 {% extends "admin.html" %}
 {% load static %}
-{% load sc_filters %}
+{% load general_filters %}
 
 {% block page_title %}Device Assessment List{% endblock %}
 
