--- a/desk/templates/issue/device_assesment_entry.html
+++ b/desk/templates/issue/device_assesment_entry.html
@@ -1,7 +1,7 @@
 {% extends "admin.html" %}
 {% load static %}
 {% load filter %}
-{% load sc_filters %}
+{% load general_filters %}
 
 {% block page_title %}{{ action.name }} Device Assessment {% endblock %}
 
