--- a/general/templates/forgot_password.html
+++ b/general/templates/forgot_password.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
-{% load sc_filters %}
+{% load general_filters %}
 {% block page_title %}Forgot Password{% endblock %}
 
 {% block page_css %}
