--- a/general/templates/forgot_password_reset.html
+++ b/general/templates/forgot_password_reset.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
-{% load sc_filters %}
+{% load general_filters %}
 {% block page_title %}Reset Password{% endblock %}
 
 {% block page_css %}
