--- a/hr/templates/hr/appraisal/entry.html
+++ b/hr/templates/hr/appraisal/entry.html
@@ -1,6 +1,6 @@
 {% extends "admin.html" %}
 {% load static %}
-{% load sc_filters %}
+{% load general_filters %}
 {% load humanize %}
 
 {% block page_title %}Appraisal Request{% endblock %}
