--- a/hr/templates/hr/attendance/report.html
+++ b/hr/templates/hr/attendance/report.html
@@ -1,6 +1,6 @@
 {% extends "admin.html" %}
 {% load static %}
-{% load sc_filters %}
+{% load general_filters %}
 
 {% block page_title %}Monthly Attendance Report{% endblock %}
 
