--- a/hr/templates/hr/employee/edit.html
+++ b/hr/templates/hr/employee/edit.html
@@ -1,6 +1,6 @@
 {% extends "admin.html" %}
 {% load static %}
-{% load sc_filters %}
+{% load general_filters %}
 
 {% block page_title %}Update Employee {% endblock %}
 {% block add_css %}
