--- a/hr/templates/hr/holiday/calendar.html
+++ b/hr/templates/hr/holiday/calendar.html
@@ -1,6 +1,6 @@
 {% extends "admin.html" %}
 {% load static %}
-{% load sc_filters %}
+{% load general_filters %}
 {% block page_title %}Holiday Calendar{% endblock %}
 
 {% block add_css %}
