--- a/hr/templates/hr/hr_salary_cycle.html
+++ b/hr/templates/hr/hr_salary_cycle.html
@@ -1,7 +1,7 @@
 {% extends "admin.html" %}
 {% load static %}
 {% load humanize %}
-{% load sc_filters %}
+{% load general_filters %}
 {% block page_title %}Salary Cycle{% endblock %}
 
 {% block content %}
