--- a/hr/templates/hr/leave/allocation/list.html
+++ b/hr/templates/hr/leave/allocation/list.html
@@ -1,7 +1,6 @@
 {% extends "admin.html" %}
 {% load static %}
-{% load sc_filters %}
-{% load inv_filters %}
+{% load general_filters %}
 
 {% block page_title %}Leave Allocations{% endblock %}
 
