--- a/hr/templates/hr/leave/allocation/user.html
+++ b/hr/templates/hr/leave/allocation/user.html
@@ -1,6 +1,6 @@
 {% extends "admin.html" %}
 {% load static %}
-{% load sc_filters %}
+{% load general_filters %}
 {% block page_title %}Leave Allocation{% endblock %}
 {% block add_css %}
 <style>
