--- a/hr/templates/hr/leave/application/list.html
+++ b/hr/templates/hr/leave/application/list.html
@@ -1,6 +1,6 @@
 {% extends "admin.html" %}
 {% load static %}
-{% load sc_filters %}
+{% load general_filters %}
 {% load data_load %}
 {% block page_title %}Leave Application{% endblock %}
 
