--- a/hr/templates/hr/salary/pay_slip_print.html
+++ b/hr/templates/hr/salary/pay_slip_print.html
@@ -1,6 +1,6 @@
 {% load static %}
 {% load math-filters %}
-{% load sc_filters %}
+{% load general_filters %}
 
 <!doctype html>
 <html lang="en" dir="ltr">
