--- a/templates/print_base.html
+++ b/templates/print_base.html
@@ -1,5 +1,5 @@
 {% load static %}
-{% load sc_filters %} 
+{% load general_filters %} 
 <html lang="en"> 
     <head>
         <meta charset="UTF-8" />
