noyon : issue : template updated

--- a/general/templates/analytics_reports.html
+++ b/general/templates/analytics_reports.html
@@ -1,6 +1,6 @@
-<h5 style="margin: 20px;"> <button style="color: red; border-radius: 20;" onclick="history.back()">X</button>  EBS Analytics Report</h5>
+<h5 style="margin: 20px;"> <button style="color: red; border-radius: 20;" onclick="history.back()">X</button>  HRM Analytics Report</h5>
 
-<script src="https://esquireanalytics-axxfbb4f6foy-si.analytics.ocp.oraclecloud.com/public/dv/v1/embedding/standalone/embedding.js" type="application/javascript">
+<script src="#" type="application/javascript">
 </script>
 <!-- <div style="float:left; width: 45%; height: (100% — 100px); border: 1px solid black; padding: 10px;" >
     <oracle-dv project-path="/@Catalog/users/iahmedbd@gmail.com/Process wise total"></oracle-dv>
@@ -8,7 +8,7 @@
 
 <!-- <div style="float:left; width: 45%; height: (100% — 100px); border: 1px solid black; padding: 10px; margin-left:5%" > -->
     <div style="border: 1px solid lightgray; margin: 20px; height: 70vh;">
-        <oracle-dv project-path="/@Catalog/users/sarek@esquire.com.bd/Export LC vs BBLC"></oracle-dv>
+        <oracle-dv project-path="/@Catalog/users/"></oracle-dv>
     </div>
 <!-- </div> -->
 
