--- a/general/templates/home_info_1.html
+++ b/general/templates/home_info_1.html
@@ -98,7 +98,7 @@
                                 role: "annotation" }]);
 
             var options = {
-            title: "Esquire Knit Composite Ltd (Main Plant) \n Unit wise Sewing (PC)",
+            title: "Unit wise Sewing (PC)",
             bar: {groupWidth: "50%"},
             vAxis: { format: 'short'},
             legend: { position: "top" },
@@ -582,7 +582,7 @@
                                 role: "annotation" }]);
 
             var options = {
-            title: "L'Esquire Ltd-Bhaluka and Unit 7 & 8 (Day) \n Efficiency: (P) {{ operation_bulletin_lesq.efficiency_day_plan }}%, (A) {{ operation_bulletin_lesq.efficiency_day }}%",
+            title: "Efficiency: (P) {{ operation_bulletin_lesq.efficiency_day_plan }}%, (A) {{ operation_bulletin_lesq.efficiency_day }}%",
             bar: {groupWidth: "50%"},
             vAxis: { format: 'short'},
             legend: { position: "top" },
@@ -626,7 +626,7 @@
                                 role: "annotation" }]);
 
             var options = {
-            title: "L'Esquire Ltd-Bhaluka and Unit 7 & 8 (MTD) \n Efficiency: (P) {{ operation_bulletin_lesq.efficiency_mtd_plan }}%, (A) {{ operation_bulletin_lesq.efficiency_mtd }}%",
+            title: "Efficiency: (P) {{ operation_bulletin_lesq.efficiency_mtd_plan }}%, (A) {{ operation_bulletin_lesq.efficiency_mtd }}%",
             bar: {groupWidth: "50%"},
             vAxis: { format: 'short'},
             legend: { position: "top" },
@@ -667,7 +667,7 @@
                                 role: "annotation" }]);
 
             var options = {
-            title: "Esquire Knit Composite Ltd (Main Plant)",
+            title: "HO",
             bar: {groupWidth: "50%"},
             vAxis: { format: 'short'},
             legend: { position: "top" },
@@ -708,7 +708,7 @@
                                 role: "annotation" }]);
 
             var options = {
-            title: "L'Esquire Limited (Unit 7 & 8)",
+            title: "#",
             bar: {groupWidth: "50%"},
             vAxis: { format: 'short'},
             legend: { position: "top" },
