--- a/general/templates/login1.html
+++ b/general/templates/login1.html
@@ -71,7 +71,7 @@
                         </div>
                         <div class="form-group m-b-0">
                             <div class="col-sm-12 text-center esquire-light-font text">
-                                <a href="#" target="_blank"><span class="text-grey esquire-light-font">&copy; Dunke Technology Gmbh</span></a>
+                                <a href="#" target="_blank"><span class="text-grey esquire-light-font">&copy; HRM</span></a>
                             </div>
                         </div>
                     </form>
