--- a/hr/templates/hr/salary/pay_slip_print.html
+++ b/hr/templates/hr/salary/pay_slip_print.html
@@ -349,7 +349,7 @@
                             </tr>
                         </tbody>
                     </table>
-                    <p class="text-center">Powered by E-BIT, Esquire Technology Limited</p>
+                    <p class="text-center">Powered by N13, HRM</p>
                 </div>
                 {% endfor %}
             </div>
