--- a/hr/templates/hr/salary/pay_slip_print_bn.html
+++ b/hr/templates/hr/salary/pay_slip_print_bn.html
@@ -344,7 +344,7 @@
                             </tr>
                         </tbody>
                     </table>
-                    <p class="text-center mb-1">Powered by E-BIT, Esquire Technology Limited</p>
+                    <p class="text-center mb-1">Powered by N13, HRM</p>
                 </div>
                 {% endfor %}
             </div>
