--- a/templates/admin.html
+++ b/templates/admin.html
@@ -114,14 +114,13 @@
         <footer class="footer"  style="background-color: #F8F9FA;">
             <div class="row" style="font-weight: 400;">
                 <div class="col-6">
-                    <!-- <span>Version 0.0.3</span> -->
+                    <!-- <span>Version 0.0.0</span> -->
                     <a href="/version/" class="m-r-10 text-info">
-                        Version 2.2.5
+                        Version 1.0.0
                     </a>
                 </div>
                 <div class="col-6 text-right ">
-                    <!-- {% now "Y" as current_year %} {% if current_year == '2020' %} {% elif current_year != '2021' %} 2021 - {% endif %} {% now 'Y' %} -->
-                    <a href="http://esquiretechnology.com/" target="_blank"><span class="text-grey esquire-light-font">&copy; Esquire Technology Ltd</span></a>
+                    <a href="#" target="_blank"><span class="text-grey esquire-light-font">&copy; HRM</span></a>
                 </div>
             </div>
         </footer>
