--- a/templates/print_base_landscape_tex.html
+++ b/templates/print_base_landscape_tex.html
@@ -105,7 +105,7 @@
                     <p> Printed by: {{user}} ({% now "d-m-y, H:i A" %})</p> 
                 </div>
                 <div id="last_content" align="center" style="font-size: 8px;"> 
-                    <p> Powered by E-BIT, Esquire Technology Limited</p> 
+                    <p> Powered by N13, HRM</p> 
                 </div>
                 
             </div>
