--- a/desk/templates/issue/assessment_approved_report.html
+++ b/desk/templates/issue/assessment_approved_report.html
@@ -24,11 +24,9 @@
     <table>
         <tr>
             <td width="42%">
-                <p style="text-align:right;padding:5px;"><img style="width:70px;height:70px;" src="https://ebs.esquire.com.bd/assets/images/esquire-logo.png"></p>	
-                <!-- <p style="text-align:right;padding:5px;"><img style="width:70px;height:70px;" src="{{host}}/assets/images/esquire-logo.png"></p>	 -->
+                <p style="text-align:right;padding:5px;"><img style="width:70px;height:70px;" src="" alt="IMG"></p>	
              </td>
             <td>
-                <h1 style="text-align:left;font-family: Cambria Math, serif;margin:0px;padding-top:10px;font-size:24px;color:#304050;line-height:25px;">Esquire Group</h1>
                 <h4 style="text-align:left;margin:0px;font-size:17px;color:#304050;">ICT Device Assessment</h4>
             </td>
         </tr>
@@ -96,7 +94,7 @@
             <td style="padding-top:15px;">
                 <center>
                     {% if assessment.assessment_by_name.official_info.signature %}
-                        <img style="width:80px;height:40px;" src="https://ebs.esquire.com.bd/assets/uploads/{{assessment.assessment_by_name.official_info.signature}}">  <br>
+                        <img style="width:80px;height:40px;" src="assets/uploads/{{assessment.assessment_by_name.official_info.signature}}">  <br>
                         <!-- <br><br>Prepared <br> -->
                     {% else %}
                     <br><br>Prepared <br>
@@ -111,7 +109,7 @@
                 <td style="padding-top:15px;">
                     <center>
                         {% if assessment.head_of_assessment_name.official_info.signature %}
-                            <img style="width:80px;height:40px;" src="https://ebs.esquire.com.bd/assets/uploads/{{assessment.head_of_assessment_name.official_info.signature}}">  <br>
+                            <img style="width:80px;height:40px;" src="/assets/uploads/{{assessment.head_of_assessment_name.official_info.signature}}">  <br>
                             <!-- <br><br>Approved <br> -->
                         {% else %}
                         <br><br>Approved <br>
@@ -127,7 +125,7 @@
                 <td style="padding-top:15px;">
                     <center>
                         {% if assessment.head_of_ict_name.official_info.signature %}
-                            <img style="width:80px;height:40px;" src="https://ebs.esquire.com.bd/assets/uploads/{{assessment.head_of_ict_name.official_info.signature}}">  <br>
+                            <img style="width:80px;height:40px;" src="/assets/uploads/{{assessment.head_of_ict_name.official_info.signature}}">  <br>
                             <!-- <br><br>Approved <br> -->
                         {% else %}
                         <br><br>Approved <br>
@@ -158,7 +156,7 @@
                 <td style="padding-top:15px;">
                     <center>
                         {% if assessment.ceo_name.official_info.signature %}
-                            <img style="width:80px;height:40px;" src="https://ebs.esquire.com.bd/assets/uploads/{{assessment.ceo_name.official_info.signature}}">  <br>
+                            <img style="width:80px;height:40px;" src="/assets/uploads/{{assessment.ceo_name.official_info.signature}}">  <br>
                             <!-- <br><br>Approved <br> -->
                         {% else %}
                         <br><br> Approved<br>
