--- a/general/templates/forgot_password.html
+++ b/general/templates/forgot_password.html
@@ -126,7 +126,7 @@
                     </div>
                     <div class="form-group m-b-0">
                         <div class="col-sm-12 text-center text">
-                            <a href="http://esquiretechnology.com/" target="_blank"><span class="text-white">&copy; Esquire Technology Ltd</span></a>
+                            <a href="#" target="_blank"><span class="text-white">&copy; HRM</span></a>
                         </div>
                     </div>
                 </form>
