--- a/general/templates/forgot_password_reset.html
+++ b/general/templates/forgot_password_reset.html
@@ -58,19 +58,13 @@
             <div class="row">
                 <div class="col-md-6 pr-0 pl-0"></div>
                 <div class="col-md-2 pr-0 pl-0 text-right pb-3 pt-3">
-                    <a href="https://www.facebook.com/ebitofficial/">
+                    <a href="#">
                         <img title="Facebook" src="/assets/images/background/facebook.webp" alt="facebook Logo" id="logo" style="width:33%;">
                     </a>
                 </div>
                 <div class="col-md-2 pr-0 pl-0 text-center pb-3 pt-3">
-                    <a href="https://www.linkedin.com/company/e-bitofficial/">
-                        <img title="Linkdin" src="/assets/images/icon/linkdin.png" alt="E-Bit Logo" id="linkdin logo"  style="width:33%;">
-                    </a>
-                </div>
-                
-                <div class="col-md-2 pr-0 pl-0 text-left pb-3 pt-3">
-                    <a href="http://esquiretechnology.com/">
-                        <img title="Esquire Technology" src="/assets/images/icon/esquire-icon.png" alt="E-Bit Logo" id="logo" style="width:33%;">
+                    <a href="#">
+                        <img title="Linkdin" src="/assets/images/icon/linkdin.png" alt="Linked Logo" id="linkdin logo"  style="width:33%;">
                     </a>
                 </div>
             </div>
@@ -111,7 +105,7 @@
                     </div>
                     <div class="form-group m-b-0">
                         <div class="col-sm-12 text-center text">
-                            <a href="http://esquiretechnology.com/" target="_blank"><span class="text-white">&copy; Esquire Technology Ltd</span></a>
+                            <a href="#" target="_blank"><span class="text-white">&copy; HRM</span></a>
                         </div>
                     </div>
                 </form>
