--- a/general/templates/home2.html
+++ b/general/templates/home2.html
@@ -485,7 +485,7 @@
                                 role: "annotation" }]);
 
             var options = {
-            title: "Esquire Knit Composite Ltd (Main Plant)",
+            title: "HO",
             bar: {groupWidth: "70%"},
             vAxis: { format: 'short'},
             legend: { position: "top" },
@@ -527,7 +527,7 @@
                                 role: "annotation" }]);
 
             var options = {
-            title: "L'Esquire Limited (Unit 7 & 8)",
+            title: "#",
             bar: {groupWidth: "70%"},
             vAxis: { format: 'short'},
             legend: { position: "top" },
@@ -568,7 +568,7 @@
                                 role: "annotation" }]);
     
             var options = {
-            title: "Esquire Knit Composite Ltd (Main Plant) \n Unit wise Sewing (PC)",
+            title: " Unit wise Sewing (PC)",
             bar: {groupWidth: "70%"},
             vAxis: { format: 'short'},
             legend: { position: "top" },
