--- a/templates/print_base.html
+++ b/templates/print_base.html
@@ -81,7 +81,7 @@
                 <table>
                     <tr>
                         <td style="text-align:right;padding:4px;padding-top: 0px;padding-bottom: 0px;">
-                            <img class="logo" src="{% settings_value "DOMAIN_URL" %}assets/images/esquire-logo.png" alt="Esquire Logo" />
+                            <img class="logo" src="{% settings_value "DOMAIN_URL" %}assets/images/esquire-logo.png" alt="HRM Logo" />
                         </td>
                         <td style="text-align:left">
                             <h3 style="text-align: center; margin-bottom: 0px; padding-bottom: 0px;">{{company.name}}</h3>
@@ -105,7 +105,7 @@
                     <p> Printed by: {{user}} ({% now "d-M-Y H:i A" %})</p> 
                 </div>
                 <div id="last_content" align="center" style="font-size: small;"> 
-                    <p> Powered by E-BIT, Esquire Technology Limited</p> 
+                    <p> Powered by N13, HRM</p> 
                 </div>
                 <div id="footer_content" align="right" style="font-size: small;">
                     Page <pdf:pagenumber> of <pdf:pagecount>
