--- a/templates/print_base_landscape.html
+++ b/templates/print_base_landscape.html
@@ -71,7 +71,7 @@
                 <table>
                     <tr>
                         <td style="text-align:right;padding:4px;padding-top: 0px;padding-bottom: 0px;">
-                            <img class="logo" src="{% settings_value "DOMAIN_URL" %}assets/images/esquire-logo.png" alt="Esquire Logo" />
+                            <img class="logo" src="{% settings_value "DOMAIN_URL" %}assets/images/esquire-logo.png" alt="HRM Logo" />
                         </td>
                         <td style="text-align:left">
                             <h1 style="text-align: center; margin-bottom: 0px; padding-bottom: 0px;">{{company.name}}</h1>
@@ -96,7 +96,7 @@
                     <p> <b>Printed by: {{user}} ( {% now 'd-M-Y h:i A' as datetime %}{{datetime|upper}} )</b></p> 
                 </div>
                 <div id="last_content" align="center" style="font-size: small;"> 
-                    <p> <b>Powered by E-BIT, Esquire Technology Limited</b></p> 
+                    <p> <b>Powered by N13, HRM</b></p> 
                 </div>
                 <div id="footer_content" align="right" style="font-size: small;">
                     <b>Page <pdf:pagenumber> of <pdf:pagecount></b>
