--- a/templates/print_base_landscape_new.html
+++ b/templates/print_base_landscape_new.html
@@ -71,7 +71,7 @@
                 @bottom-center {
                     font-size:8px;
                     font-weight:bold;
-                    content: 'Powered by E-BIT, Esquire Technology Limited';
+                    content: 'Powered by N13, HRM';
                 }
                 @bottom-right {
                     font-size:8px;
@@ -101,7 +101,7 @@
         <table style="margin:0 auto;width:100;text-align: center!important;">
             <tr style="text-align: center!important;">
                 <td style="text-align:right;padding:4px;padding-top: 0px;padding-bottom: 0px;">
-                    <img class="logo" src="{% settings_value "DOMAIN_URL" %}assets/images/esquire-logo.png" alt="Esquire Logo" />
+                    <img class="logo" src="{% settings_value "DOMAIN_URL" %}assets/images/esquire-logo.png" alt="HRM Logo" />
                 </td>
                 <td style="text-align:left">
                     <h1 style="text-align: center; margin-bottom: 0px; padding-bottom: 0px;">{{company.name}}</h1>
