--- a/hr/templates/audit_status/audit_status_view.html
+++ b/hr/templates/audit_status/audit_status_view.html
@@ -55,8 +55,8 @@
                 <div class="table-responsive">
                     <table class="table" style="font-weight: 400;">
                             <tr>
-                            <td>Comapany : {{instance.company}}</td>
-                            <td>Name of Buyer/Certification : {{instance.name_of_buyer}}</td>
+                            <td>Branch : {{instance.branch}}</td>
+                            <td>Name of Certification : {{instance.name_of_buyer}}</td>
                             <td>Type of Audit : {{instance.type_of_audit}}</td>
                             <td>Last Audit Date : {{instance.last_audit_date}}</td>
                             </tr>
