--- a/hr/templates/hr/salary/pay_slip.html
+++ b/hr/templates/hr/salary/pay_slip.html
@@ -50,8 +50,8 @@
         </div>  
         <div class="col-md">
             <div class="form-group mb-3">
-                <label for="company">Company</label>
-                <select class="form-control text-capitalize select2" name="company" id="company" data-title="Company" required />
+                <label for="company">Branch</label>
+                <select class="form-control text-capitalize select2" name="company" id="company" data-title="Branch" required />
                     <option value="" disabled selected></option>
                     {% for company in companies %}
                     <option value="{{company.id}}">{{company.short_name}}</option>
