--- a/hr/templates/license/license.html
+++ b/hr/templates/license/license.html
@@ -45,12 +45,12 @@
                     <div class="row">
                       <div class="col-md-3">
                         <div class="form-group">
-                          <label for="company">Company</label>
+                          <label for="company">Branch</label>
                           <select class="form-control text-capitalize select2" id="company" name="company"
-                            data-title="Company" required>
+                            data-title="Branch" required>
                             <option value="" disabled selected></option>
                             {% for data in company_list %}
-                               <option value="{{data.id}}" {% if instance.company_id == data.id %} selected {% endif %}>{{data.name}}
+                               <option value="{{data.id}}" {% if instance.branch_id == data.id %} selected {% endif %}>{{data.name}}
                                </option>
                             {% endfor %}
                           </select>
