--- a/hr/templates/pf/employee_transfer.html
+++ b/hr/templates/pf/employee_transfer.html
@@ -65,7 +65,7 @@
               <div class="row mb-0">
                 <div class="col-md-12 py-4">
                   <div class="row">
-                    <div class="col-md-5 font-weight-bold py-2">Company</div>
+                    <div class="col-md-5 font-weight-bold py-2">Branch</div>
                     <div class="col-md-4 font-weight-bold py-2" id ="company" name="company"></div>
 
                     <div class="col-md-5 font-weight-bold py-2">Department</div>
@@ -112,12 +112,12 @@
               <input type="hidden" class="form-control" id="emp_id" name="emp_id">
               <div class="col-md-6 mt-2">
                 <div class="form-group">
-                  <label for="company">Destination Company</label>
+                  <label for="company">Destination Branch</label>
                    <select class="form-control text-capitalize select2" id="company" name="company"
-                      data-title="Company" required>
+                      data-title="Branch" required>
                       <option value="" disabled selected></option>
                       {% for data in company_list %}
-                      <option value="{{data.id}}" {% if employee.company_id == data.id %} selected {% endif %}>{{data.name}}
+                      <option value="{{data.id}}" {% if employee.branch_id == data.id %} selected {% endif %}>{{data.name}}
                       </option>
                       {% endfor %}
                    </select>
