employee import issue, dahsboard menu color issue, employee cessation model added for maintain resignation and termination

--- a/general/templates/home1.html
+++ b/general/templates/home1.html
@@ -98,7 +98,7 @@
             }
         } {% endcomment %}
         .bg-gradient-fuchsia{
-            background-image: linear-gradient(310deg,#141727,#015178);
+            background-image: linear-gradient(310deg,#1E90FF,#1E90FF);
             box-shadow: 0 0.125rem 0.25rem 0 rgb(0 0 0 / 12%);
         }
         .shadow{
